# maccy-kde

./: Cargo.toml  README.md  build.rs  maccy-kde.desktop  maccy-kde.spec  org.maccy_kde.ClipboardManager.yml
docs/: 01_architecture.md  02_database.md  03_clipboard_wayland.md  04_ui_slint.md  master_plan.md
src/: app.rs  autostart.rs  bootstrap.rs  clipboard.rs  daemon.rs  database.rs  gui.rs  hotkey.rs  integration_tests.rs  ipc.rs  lib.rs  main.rs  paster.rs  popup.rs
src/application/: mod.rs
src/application/category/: category_service.rs  mod.rs
src/application/clipboard/: item_management_service.rs  mod.rs  monitor_service.rs
src/application/daemon/: daemon_service.rs  mod.rs  runtime.rs
src/application/popup/: mod.rs  popup_service.rs
src/application/search/: category_filter_service.rs  fuzzy_search_service.rs  mod.rs
src/cli/: cli_parser.rs  mod.rs
src/cli/commands/: daemon_command.rs  item_command.rs  mod.rs  popup_command.rs
src/domain/entities/: category.rs  clipboard_item.rs  content.rs  item_id.rs  mime_type.rs  mod.rs  timestamp.rs
src/domain/repositories/: clipboard_repository.rs  image_repository.rs  mod.rs
src/domain/services/: category_detector.rs  deduplication.rs  mod.rs  rotation.rs
src/infrastructure/: mod.rs
src/infrastructure/persistence/sqlite/: clipboard_repository_impl.rs  connection.rs  mod.rs
src/infrastructure/system/paths/: app_paths.rs  mod.rs
src/integration/: mod.rs  repository_bridge.rs
src/presentation/: mod.rs  presentation_service.rs
src/presentation/models/: item_view_model.rs  mod.rs  popup_state.rs
src/shared/: error.rs  mod.rs
tests/: gui_test.rs  search_test.rs
ui/: menu.slint
