[package]
name = "maccy-kde"
version = "0.1.0"
edition = "2021"
authors = ["Ваше Имя <ваша.почта@example.com>"]
description = "A lightweight, keyboard-first clipboard manager inspired by Maccy, built for KDE Plasma 6 (Wayland)"

[dependencies]
rusqlite = { version = "0.30.0", features = ["bundled"] }
tokio = { version = "1.35", features = ["full"] }
enigo = "0.2.1"
slint = "1.1.0"
fuzzy-matcher = "0.3.7"
chrono = "0.4.31"
log = "0.4.20"
env_logger = "0.10.1"

[target.'cfg(target_os = "linux")'.dependencies]
# Нативный слушатель буфера Wayland
smithay-clipboard = "0.7.0"
# Работа с системной шиной (KDE Global Shortcuts)
zbus = "3.14.1"
