[package]
name = "maccy-kde"
version = "0.1.0"
edition = "2021"
authors = ["Ваше Имя <ваша.почта@example.com"]
description = "A lightweight, keyboard-first clipboard manager inspired by Maccy, built for KDE Plasma 6 (Wayland)"
build = "build.rs"

[dependencies]
rusqlite = { version = "0.30.0", features = ["bundled"] }
tokio = { version = "1.35", features = ["rt-multi-thread", "time", "macros", "net", "io-util"] }
enigo = "0.2.1"
slint = "1.16.1"
fuzzy-matcher = "0.3.7"
chrono = "0.4.31"
log = "0.4.20"
env_logger = "0.10.1"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.0"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.0"

[build-dependencies]
slint-build = "1.16.1"

[target.'cfg(target_os = "linux")'.dependencies]
# Нативный слушатель буфера Wayland (без поллинга)
wayland-clipboard-listener = "0.6.1"
# Работа с системной шиной (KDE Global Shortcuts)
zbus = "3.14.1"

[target.'cfg(target_os = "macos")'.dependencies]
# Фолбэк для разработки на macOS (с поллингом)
arboard = "3.4.0"
