[package]
name = "maccy-kde"
version = "0.1.0"
edition = "2021"
authors = ["Uladzislau Darazhei <uladzislau.darazhei@gmail.com>"]
description = "A lightweight, keyboard-first clipboard manager inspired by Maccy, built for KDE Plasma 6 (Wayland)"
build = "build.rs"

[package.metadata.bundle]
name = "maccy-kde"
identifier = "org.maccy-kde.clipboard"
version = "0.1.0"
resources = ["maccy-kde.desktop"]
copyright = "Copyright (c) 2026 Uladzislau Darazhei"
category = "Utility"
long_description = """
A lightweight, keyboard-first clipboard manager for Linux, built specifically for KDE Plasma 6 on Wayland.
"""

[package.metadata.bundle.osx]
icon = "assets/icon.icns"
minimize_window = false
high_resolution = true
info_plist_extra = {
    LSUIElement = true,
    NSRequiresAquaSystemAppearance = false
}

[dependencies]
rusqlite = { version = "0.30.0", features = ["bundled"] }
tokio = { version = "1.35", features = ["rt-multi-thread", "time", "macros", "net", "io-util"] }
enigo = "0.2.1"
slint = "1.16.1"
fuzzy-matcher = "0.3.7"
chrono = "0.4.31"
log = "0.4.20"
env_logger = "0.10.1"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.0"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.0"
regex = "1.10"

[build-dependencies]
slint-build = "1.16.1"

[target.'cfg(target_os = "linux")'.dependencies]
# Нативный слушатель буфера Wayland (без поллинга)
wayland-clipboard-listener = "0.6.1"
# Работа с системной шиной (KDE Global Shortcuts)
zbus = "3.14.1"

[target.'cfg(target_os = "macos")'.dependencies]
# Фолбэк для разработки на macOS (с поллингом)
arboard = "3.4.0"
